@@ -10,4 +10,20 @@
 {
 }
 
+@h5schema ConfigV2 
+  [[version(0)]]
+{
+  @dataset data {
+    @attribute numWords;
+    @attribute numSources;
+    @attribute numBldMaskBits;
+    @attribute bldMaskIsZero;
+    @attribute bldMaskIsNotZero;
+  }
+  @dataset bldMask;
+  @dataset sources;
+  @dataset bldMaskHasBitSet [[method_domain(bldMaskHasBitSet, @psanaobj.numBldMaskBits)]];
+  @dataset bldMaskHasBitClear [[method_domain(bldMaskHasBitClear, @psanaobj.numBldMaskBits)]];
+}
+
 } //- @package Partition
