@@ -214,5 +214,266 @@ void store_at(const Psana::Partition::ConfigV1* obj, hdf5pp::Group group, long i
   store_ConfigV1(obj, group, index, version, true);
 }
 
+
+hdf5pp::Type ns_ConfigV2_v0_dataset_data_stored_type()
+{
+  typedef ns_ConfigV2_v0::dataset_data DsType;
+  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
+  type.insert("numWords", offsetof(DsType, numWords), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  type.insert("numSources", offsetof(DsType, numSources), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  type.insert("numBldMaskBits", offsetof(DsType, numBldMaskBits), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  type.insert("bldMaskIsZero", offsetof(DsType, bldMaskIsZero), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  type.insert("bldMaskIsNotZero", offsetof(DsType, bldMaskIsNotZero), hdf5pp::TypeTraits<uint32_t>::stored_type());
+  return type;
+}
+
+hdf5pp::Type ns_ConfigV2_v0::dataset_data::stored_type()
+{
+  static hdf5pp::Type type = ns_ConfigV2_v0_dataset_data_stored_type();
+  return type;
+}
+
+hdf5pp::Type ns_ConfigV2_v0_dataset_data_native_type()
+{
+  typedef ns_ConfigV2_v0::dataset_data DsType;
+  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
+  type.insert("numWords", offsetof(DsType, numWords), hdf5pp::TypeTraits<uint32_t>::native_type());
+  type.insert("numSources", offsetof(DsType, numSources), hdf5pp::TypeTraits<uint32_t>::native_type());
+  type.insert("numBldMaskBits", offsetof(DsType, numBldMaskBits), hdf5pp::TypeTraits<uint32_t>::native_type());
+  type.insert("bldMaskIsZero", offsetof(DsType, bldMaskIsZero), hdf5pp::TypeTraits<uint32_t>::native_type());
+  type.insert("bldMaskIsNotZero", offsetof(DsType, bldMaskIsNotZero), hdf5pp::TypeTraits<uint32_t>::native_type());
+  return type;
+}
+
+hdf5pp::Type ns_ConfigV2_v0::dataset_data::native_type()
+{
+  static hdf5pp::Type type = ns_ConfigV2_v0_dataset_data_native_type();
+  return type;
+}
+
+ns_ConfigV2_v0::dataset_data::dataset_data()
+{
+}
+
+ns_ConfigV2_v0::dataset_data::dataset_data(const Psana::Partition::ConfigV2& psanaobj)
+  : numWords(psanaobj.numWords())
+  , numSources(psanaobj.numSources())
+  , numBldMaskBits(psanaobj.numBldMaskBits())
+  , bldMaskIsZero(psanaobj.bldMaskIsZero())
+  , bldMaskIsNotZero(psanaobj.bldMaskIsNotZero())
+{
+}
+
+ns_ConfigV2_v0::dataset_data::~dataset_data()
+{
+}
+uint32_t ConfigV2_v0::numWords() const {
+  if (not m_ds_data) read_ds_data();
+  return uint32_t(m_ds_data->numWords);
+}
+uint32_t ConfigV2_v0::numSources() const {
+  if (not m_ds_data) read_ds_data();
+  return uint32_t(m_ds_data->numSources);
+}
+ndarray<const uint32_t, 1> ConfigV2_v0::bldMask() const {
+  if (m_ds_bldMask.empty()) read_ds_bldMask();
+  return m_ds_bldMask;
+}
+ndarray<const Psana::Partition::Source, 1> ConfigV2_v0::sources() const {
+  if (m_ds_sources.empty()) read_ds_sources();
+  return m_ds_sources;
+}
+uint32_t ConfigV2_v0::numBldMaskBits() const {
+  if (not m_ds_data) read_ds_data();
+  return uint32_t(m_ds_data->numBldMaskBits);
+}
+uint32_t ConfigV2_v0::bldMaskIsZero() const {
+  if (not m_ds_data) read_ds_data();
+  return uint32_t(m_ds_data->bldMaskIsZero);
+}
+uint32_t ConfigV2_v0::bldMaskIsNotZero() const {
+  if (not m_ds_data) read_ds_data();
+  return uint32_t(m_ds_data->bldMaskIsNotZero);
+}
+uint32_t ConfigV2_v0::bldMaskHasBitSet(uint32_t iBit) const {
+  if (m_ds_bldMaskHasBitSet.empty()) read_ds_bldMaskHasBitSet();
+  return m_ds_bldMaskHasBitSet[ iBit ];
+}
+uint32_t ConfigV2_v0::bldMaskHasBitClear(uint32_t iBit) const {
+  if (m_ds_bldMaskHasBitClear.empty()) read_ds_bldMaskHasBitClear();
+  return m_ds_bldMaskHasBitClear[ iBit ];
+}
+void ConfigV2_v0::read_ds_data() const {
+  m_ds_data = hdf5pp::Utils::readGroup<Partition::ns_ConfigV2_v0::dataset_data>(m_group, "data", m_idx);
+}
+void ConfigV2_v0::read_ds_bldMask() const {
+  m_ds_bldMask = hdf5pp::Utils::readNdarray<uint32_t, 1>(m_group, "bldMask", m_idx);
+}
+void ConfigV2_v0::read_ds_sources() const {
+  ndarray<Partition::ns_Source_v0::dataset_data, 1> arr = hdf5pp::Utils::readNdarray<Partition::ns_Source_v0::dataset_data, 1>(m_group, "sources", m_idx);
+  ndarray<Psana::Partition::Source, 1> tmp(arr.shape());
+  std::copy(arr.begin(), arr.end(), tmp.begin());
+  m_ds_sources = tmp;
+}
+void ConfigV2_v0::read_ds_bldMaskHasBitSet() const {
+  m_ds_bldMaskHasBitSet = hdf5pp::Utils::readNdarray<uint32_t, 1>(m_group, "bldMaskHasBitSet", m_idx);
+}
+void ConfigV2_v0::read_ds_bldMaskHasBitClear() const {
+  m_ds_bldMaskHasBitClear = hdf5pp::Utils::readNdarray<uint32_t, 1>(m_group, "bldMaskHasBitClear", m_idx);
+}
+
+void make_datasets_ConfigV2_v0(const Psana::Partition::ConfigV2& obj, 
+      hdf5pp::Group group, const ChunkPolicy& chunkPolicy, int deflate, bool shuffle)
+{
+  {
+    hdf5pp::Type dstype = Partition::ns_ConfigV2_v0::dataset_data::stored_type();
+    hdf5pp::Utils::createDataset(group, "data", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    typedef __typeof__(obj.bldMask()) PsanaArray;
+    const PsanaArray& psana_array = obj.bldMask();
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<uint32_t>::stored_type(), psana_array.shape()[0]);
+    hdf5pp::Utils::createDataset(group, "bldMask", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    typedef __typeof__(obj.sources()) PsanaArray;
+    const PsanaArray& psana_array = obj.sources();
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<Partition::ns_Source_v0::dataset_data>::stored_type(), psana_array.shape()[0]);
+    hdf5pp::Utils::createDataset(group, "sources", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<uint32_t>::stored_type(), obj.numBldMaskBits());
+    hdf5pp::Utils::createDataset(group, "bldMaskHasBitSet", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<uint32_t>::stored_type(), obj.numBldMaskBits());
+    hdf5pp::Utils::createDataset(group, "bldMaskHasBitClear", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+}
+
+void store_ConfigV2_v0(const Psana::Partition::ConfigV2* obj, hdf5pp::Group group, long index, bool append)
+{
+  if (obj) {
+    Partition::ns_ConfigV2_v0::dataset_data ds_data(*obj);
+    if (append) {
+      hdf5pp::Utils::storeAt(group, "data", ds_data, index);
+    } else {
+      hdf5pp::Utils::storeScalar(group, "data", ds_data);
+    }
+  } else if (append) {
+    hdf5pp::Utils::resizeDataset(group, "data", index < 0 ? index : index + 1);
+  }
+  if (append) {
+    if (obj) {
+      hdf5pp::Utils::storeNDArrayAt(group, "bldMask", obj->bldMask(), index);
+    } else {
+      hdf5pp::Utils::resizeDataset(group, "bldMask", index < 0 ? index : index + 1);
+    }
+  } else {
+    hdf5pp::Utils::storeNDArray(group, "bldMask", obj->bldMask());
+  }
+
+  if (obj) {
+    typedef __typeof__(obj->sources()) PsanaArray;
+    typedef ndarray<Partition::ns_Source_v0::dataset_data, 1> HdfArray;
+    PsanaArray psana_array = obj->sources();
+    HdfArray hdf_array(psana_array.shape());
+    HdfArray::iterator out = hdf_array.begin();
+    for (PsanaArray::iterator it = psana_array.begin(); it != psana_array.end(); ++ it, ++ out) {
+      *out = Partition::ns_Source_v0::dataset_data(*it);
+    }
+    if (append) {
+      hdf5pp::Utils::storeNDArrayAt(group, "sources", hdf_array, index);
+    } else {
+      hdf5pp::Utils::storeNDArray(group, "sources", hdf_array);
+    }
+  } else if (append) {
+    hdf5pp::Utils::resizeDataset(group, "sources", index < 0 ? index : index + 1);
+  }
+
+  if (append) {
+    if (obj) {
+      ndarray<uint32_t, 1> bldMaskHasBitSet_method_domain = make_ndarray<uint32_t>(obj->numBldMaskBits());
+      for (uint32_t methodArg = 0; methodArg < obj->numBldMaskBits(); ++methodArg) {
+        bldMaskHasBitSet_method_domain[methodArg] = obj->bldMaskHasBitSet(methodArg);
+      }
+      hdf5pp::Utils::storeNDArrayAt(group, "bldMaskHasBitSet", bldMaskHasBitSet_method_domain, index);
+    } else {
+      hdf5pp::Utils::resizeDataset(group, "bldMaskHasBitSet", index < 0 ? index : index + 1);
+    }
+  } else {
+    ndarray<uint32_t, 1> bldMaskHasBitSet_method_domain = make_ndarray<uint32_t>(obj->numBldMaskBits());
+    for (uint32_t methodArg = 0; methodArg < obj->numBldMaskBits(); ++methodArg) {
+      bldMaskHasBitSet_method_domain[methodArg] = obj->bldMaskHasBitSet(methodArg);
+    }
+    hdf5pp::Utils::storeNDArray(group, "bldMaskHasBitSet", bldMaskHasBitSet_method_domain);
+  }
+
+  if (append) {
+    if (obj) {
+      ndarray<uint32_t, 1> bldMaskHasBitClear_method_domain = make_ndarray<uint32_t>(obj->numBldMaskBits());
+      for (uint32_t methodArg = 0; methodArg < obj->numBldMaskBits(); ++methodArg) {
+        bldMaskHasBitClear_method_domain[methodArg] = obj->bldMaskHasBitClear(methodArg);
+      }
+      hdf5pp::Utils::storeNDArrayAt(group, "bldMaskHasBitClear", bldMaskHasBitClear_method_domain, index);
+    } else {
+      hdf5pp::Utils::resizeDataset(group, "bldMaskHasBitClear", index < 0 ? index : index + 1);
+    }
+  } else {
+    ndarray<uint32_t, 1> bldMaskHasBitClear_method_domain = make_ndarray<uint32_t>(obj->numBldMaskBits());
+    for (uint32_t methodArg = 0; methodArg < obj->numBldMaskBits(); ++methodArg) {
+      bldMaskHasBitClear_method_domain[methodArg] = obj->bldMaskHasBitClear(methodArg);
+    }
+    hdf5pp::Utils::storeNDArray(group, "bldMaskHasBitClear", bldMaskHasBitClear_method_domain);
+  }
+
+}
+
+boost::shared_ptr<PSEvt::Proxy<Psana::Partition::ConfigV2> > make_ConfigV2(int version, hdf5pp::Group group, hsize_t idx) {
+  switch (version) {
+  case 0:
+    return boost::make_shared<PSEvt::DataProxy<Psana::Partition::ConfigV2> >(boost::make_shared<ConfigV2_v0>(group, idx));
+  default:
+    return boost::make_shared<PSEvt::DataProxy<Psana::Partition::ConfigV2> >(boost::shared_ptr<Psana::Partition::ConfigV2>());
+  }
+}
+
+void make_datasets(const Psana::Partition::ConfigV2& obj, hdf5pp::Group group, const ChunkPolicy& chunkPolicy,
+                   int deflate, bool shuffle, int version)
+{
+  if (version < 0) version = 0;
+  group.createAttr<uint32_t>("_schemaVersion").store(version);
+  switch (version) {
+  case 0:
+    make_datasets_ConfigV2_v0(obj, group, chunkPolicy, deflate, shuffle);
+    break;
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "Partition.ConfigV2", version);
+  }
+}
+
+void store_ConfigV2(const Psana::Partition::ConfigV2* obj, hdf5pp::Group group, long index, int version, bool append)
+{
+  if (version < 0) version = 0;
+  if (not append) group.createAttr<uint32_t>("_schemaVersion").store(version);
+  switch (version) {
+  case 0:
+    store_ConfigV2_v0(obj, group, index, append);
+    break;
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "Partition.ConfigV2", version);
+  }
+}
+
+void store(const Psana::Partition::ConfigV2& obj, hdf5pp::Group group, int version) 
+{
+  store_ConfigV2(&obj, group, 0, version, false);
+}
+
+void store_at(const Psana::Partition::ConfigV2* obj, hdf5pp::Group group, long index, int version)
+{
+  store_ConfigV2(obj, group, index, version, true);
+}
+
 } // namespace Partition
 } // namespace psddl_hdf2psana
