@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag:V00-09-36
+2016-6-13 David Schneider
+- update to pdsdata 8.6.12 for Partition::ConfigV2 JIRA PSAS-241
+
 Tag: V00-09-35
 2016-6-7 David Schneider
 - allow for zero dimensions in BldDataEOrbitsV0
